# frameworks_benchmarks

./: .gitattributes  .gitignore  README.md  benchmark.js  install.js
common/: benchmark.hpp  (+2 more)
frameworks/caer/caer/: .clang-format  .cproject  .project  .travis.yml  CMakeLists.txt  ChangeLog  README.Windows  README.md  README.porting  libcaersdk.pc.in  sonar-project.properties
frameworks/caer/caer/caer-sdk/: CMakeLists.txt  buffers.h  mainloop.h  module.h  utils.h
frameworks/caer/caer/caer-sdk/cross/: c11threads_posix.h  portable_io.h  portable_threads.h  portable_time.h
frameworks/caer/caer/caer-sdk/sshs/: sshs.h  sshs.hpp
frameworks/caer/caer/docs/: caer.tex  caer_architecture.dia  davis-2cams-config.xml  davis-caffe-example.xml  davis-config.xml  davis-play-file.xml  davis-record-file.xml  dvs128-config.xml  mainloop_modules.dia  modules.txt
frameworks/caer/caer/ext/: net_rw.h
frameworks/caer/caer/ext/uthash/: utarray.h
frameworks/caer/caer/modules/: CMakeLists.txt
frameworks/caer/caer/modules/benchmark/: CMakeLists.txt  utilities.h
frameworks/caer/caer/modules/benchmark/activity_sink/: interface.c  source.cpp  source.hpp  wrapper.cpp  wrapper.h
frameworks/caer/caer/modules/benchmark/activity_sink_latencies/: interface.c  source.cpp  source.hpp  wrapper.cpp  wrapper.h
frameworks/caer/caer/modules/benchmark/compute_activity/: interface.c  source.cpp  source.hpp  wrapper.cpp  wrapper.h
frameworks/caer/caer/modules/benchmark/compute_flow/: interface.c  source.cpp  source.hpp  wrapper.cpp  wrapper.h
frameworks/caer/caer/modules/benchmark/flow_sink/: interface.c  source.cpp  source.hpp  wrapper.cpp  wrapper.h
frameworks/caer/caer/modules/benchmark/flow_sink_latencies/: interface.c  source.cpp  source.hpp  wrapper.cpp  wrapper.h
frameworks/caer/caer/modules/benchmark/mask_isolated/: interface.c  source.cpp  source.hpp  wrapper.cpp  wrapper.h
frameworks/caer/caer/modules/benchmark/reader/: interface.c  source.cpp  source.hpp  wrapper.cpp  wrapper.h
frameworks/caer/caer/modules/benchmark/reader_latencies/: interface.c  source.cpp  source.hpp  wrapper.cpp  wrapper.h
frameworks/caer/caer/modules/benchmark/select_rectangle/: interface.c  source.cpp  source.hpp  wrapper.cpp  wrapper.h
frameworks/caer/caer/modules/benchmark/sink/: interface.c  source.cpp  source.hpp  wrapper.cpp  wrapper.h
frameworks/caer/caer/modules/benchmark/sink_latencies/: interface.c  source.cpp  source.hpp  wrapper.cpp  wrapper.h
frameworks/caer/caer/modules/cameracalibration/: CMakeLists.txt  calibration.cpp  calibration.hpp  calibration_settings.h  calibration_wrapper.cpp  calibration_wrapper.h  cameracalibration.c
frameworks/caer/caer/modules/cameras/: CMakeLists.txt  caer_davis.dylib  caer_dvs128.dylib  caer_edvs.dylib  davis.c  davis_rpi.c  davis_utils.h  dvs128.c  dvs132s.c  edvs.c
frameworks/caer/caer/modules/dvsnoisefilter/: CMakeLists.txt  caer_dvsnoisefilter.dylib  dvsnoisefilter.c
frameworks/caer/caer/modules/frameenhancer/: CMakeLists.txt  caer_frameenhancer.dylib  frameenhancer.c
frameworks/caer/caer/modules/framestatistics/: CMakeLists.txt  framestatistics.cpp
frameworks/caer/caer/modules/inout/: CMakeLists.txt  inout_common.h
frameworks/caer/caer/modules/statistics/: CMakeLists.txt  caer_statistics.dylib  statistics.c  statistics.h
frameworks/caer/caer/modules/visualizer/: CMakeLists.txt  visualizer.cpp  visualizer.hpp  visualizer_handlers.cpp  visualizer_handlers.hpp  visualizer_renderers.cpp  visualizer_renderers.hpp
frameworks/caer/caer/src/: CMakeLists.txt  caer-bin  config.cpp  config.h  config_server.cpp  config_server.h  log.cpp  log.h  main.cpp  mainloop.cpp  mainloop.h  mainloop_sdk.cpp  module.cpp  module.h  module_sdk.cpp  portability_sdk.cpp
frameworks/caer/caer/src/sshs/: sshs.cpp  sshs_helper.cpp  sshs_internal.hpp  sshs_node.cpp
frameworks/caer/caer/utils/: CMakeLists.txt
frameworks/caer/caer/utils/caerctl/: .gitignore  CMakeLists.txt  caerctl.cpp
frameworks/caer/caer/utils/tcpststat/: .gitignore  CMakeLists.txt
frameworks/caer/caer/utils/udpststat/: .gitignore  CMakeLists.txt
frameworks/caer/caer/utils/unixststat/: .gitignore  CMakeLists.txt
frameworks/caer/libcaer/: .clang-format  .cproject  .project  .travis.yml  CMakeLists.txt  COPYING  ChangeLog  README  README.Windows  caer-base.cmake  libcaer.pc.in  libcaerConfig.cmake.in  sonar-project.properties
frameworks/caer/libcaer/bindings/python_swig/: .gitignore  build-python-wrapper-py2.sh  build-python-wrapper-py3.sh  pyflags.i
frameworks/caer/libcaer/docs/: .gitignore  RELEASE.txt
frameworks/caer/libcaer/docs/udev-rules/: 66-inivation_devel.rules
frameworks/caer/libcaer/examples/: .gitignore  README  davis_cvgui.cpp  davis_cvgui_filters.cpp  davis_enable_aer.cpp  davis_rpi.cpp  davis_rpi_benchmark.cpp  davis_simple.c  davis_simple.cpp  davis_simple_2cam.c  davis_text.cpp  device_discovery.c  dvs128_simple.c  dvs128_simple.cpp  dynapse_simple.c  edvs_simple.c  edvs_simple.cpp
frameworks/caer/libcaer/packaging/debian-source-package/: packageUbuntu.sh
frameworks/caer/libcaer/packaging/fedora-source-package/: .gitignore  libcaer.spec  packageFedora.sh
frameworks/caer/libcaer/src/: .gitignore  davis_rpi.c  davis_rpi.h  device.c  device_discover.c  edvs.c  edvs.h
frameworks/kaer/: CMakeLists.txt  install.js  opencv.pc  run_task.js
frameworks/kaer/source/: benchmark.hpp  compute_activity.hpp  compute_flow.hpp  denoised_flow.cpp  denoised_flow_latencies.cpp  flow.cpp  flow_latencies.cpp  mask.cpp  mask_isolated.hpp  mask_latencies.cpp  masked_denoised_flow.cpp  masked_denoised_flow_activity.cpp  masked_denoised_flow_activity_latencies.cpp  masked_denoised_flow_latencies.cpp  select_rectangle.hpp  split.hpp
frameworks/yarp_vqueue/event-driven/src/benchmark/: CMakeLists.txt  benchmark.hpp  denoised_flow.cpp  mask_isolated.hpp  select_rectangle.hpp
frameworks/yarp_vqueue/icub-contrib-common/: CMakeLists.txt  ICUBcontribOptions.cmake
frameworks/yarp_vqueue/icub-contrib-common/templates/: ICUBcontribConfig.cmake.in  icubcontrib-config-install.cmake.in
(+82 files in other folders)
