ADD_LIBRARY(dvs128 SHARED dvs128.c)

SET_TARGET_PROPERTIES(dvs128
	PROPERTIES
	PREFIX "caer_"
)

TARGET_LINK_LIBRARIES(dvs128 ${CAER_LIBS})

INSTALL(TARGETS dvs128 DESTINATION ${CAER_MODULES_DIR})

ADD_LIBRARY(edvs SHARED edvs.c)

SET_TARGET_PROPERTIES(edvs
	PROPERTIES
	PREFIX "caer_"
)

TARGET_LINK_LIBRARIES(edvs ${CAER_LIBS})

INSTALL(TARGETS edvs DESTINATION ${CAER_MODULES_DIR})

ADD_LIBRARY(davis SHARED davis.c)

SET_TARGET_PROPERTIES(davis
	PROPERTIES
	PREFIX "caer_"
)

TARGET_LINK_LIBRARIES(davis ${CAER_LIBS})

INSTALL(TARGETS davis DESTINATION ${CAER_MODULES_DIR})

IF (OS_LINUX)
	# Raspberry-Pi camera module support (Linux-only).
	ADD_LIBRARY(davis_rpi SHARED davis_rpi.c)

	SET_TARGET_PROPERTIES(davis_rpi
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(davis_rpi ${CAER_LIBS})

	INSTALL(TARGETS davis_rpi DESTINATION ${CAER_MODULES_DIR})
ENDIF()

#ADD_LIBRARY(dvs132s SHARED dvs132s.c)

#SET_TARGET_PROPERTIES(dvs132s
#    PROPERTIES
#    PREFIX "caer_"
#)

#TARGET_LINK_LIBRARIES(dvs132s ${CAER_LIBS})

#INSTALL(TARGETS dvs132s DESTINATION ${CAER_MODULES_DIR})
