IF (NOT USE_OPENCV)
	SET(USE_OPENCV 0 CACHE BOOL "Use OpenCV (needed for frame statistic histogram module)")
ENDIF()

IF (USE_OPENCV)
	# Try OpenCV 4 first.
	PKG_CHECK_MODULES(OPENCV4 opencv4>=4.0.0)
	IF (OPENCV4_FOUND)
		SET(FSTAT_INCDIRS ${CAER_INCDIRS} ${OPENCV4_INCLUDE_DIRS})
		SET(FSTAT_LIBDIRS ${CAER_LIBDIRS} ${OPENCV4_LIBRARY_DIRS})
		SET(FSTAT_LIBS ${CAER_LIBS} ${OPENCV4_LIBRARIES})
	ELSE()
		# Else require OpenCV 3.1 at least.
		PKG_CHECK_MODULES(OPENCV3 REQUIRED opencv>=3.1.0)

		SET(FSTAT_INCDIRS ${CAER_INCDIRS} ${OPENCV3_INCLUDE_DIRS})
		SET(FSTAT_LIBDIRS ${CAER_LIBDIRS} ${OPENCV3_LIBRARY_DIRS})
		SET(FSTAT_LIBS ${CAER_LIBS} ${OPENCV3_LIBRARIES})
	ENDIF()

	INCLUDE_DIRECTORIES(${FSTAT_INCDIRS})
	LINK_DIRECTORIES(${FSTAT_LIBDIRS})

	ADD_DEFINITIONS(-DLIBCAER_FRAMECPP_OPENCV_INSTALLED=1)

	ADD_LIBRARY(framestatistics SHARED framestatistics.cpp)

	SET_TARGET_PROPERTIES(framestatistics
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(framestatistics ${FSTAT_LIBS})

	INSTALL(TARGETS framestatistics DESTINATION ${CAER_MODULES_DIR})
ENDIF()
