# Not supported on Windows right now, pending switch to boost.
IF (OS_WINDOWS OR CROSS_COMPILE)
	RETURN()
ENDIF()

# Add support for PNG compression via libpng.
PKG_CHECK_MODULES(PNGCOMPR libpng>=1.6)

IF (PNGCOMPR_FOUND)
	ADD_DEFINITIONS(-DENABLE_INOUT_PNG_COMPRESSION=1)

	SET(PNGCOMPR_INCDIRS ${CAER_INCDIRS} ${PNGCOMPR_INCLUDE_DIRS})
	SET(PNGCOMPR_LIBDIRS ${CAER_LIBDIRS} ${PNGCOMPR_LIBRARY_DIRS})
	SET(PNGCOMPR_LIBS ${CAER_LIBS} ${PNGCOMPR_LIBRARIES})

	INCLUDE_DIRECTORIES(${PNGCOMPR_INCDIRS})
	LINK_DIRECTORIES(${PNGCOMPR_LIBDIRS})

	SET(CAER_INCDIRS ${PNGCOMPR_INCDIRS})
	SET(CAER_LIBDIRS ${PNGCOMPR_LIBDIRS})
	SET(CAER_LIBS ${PNGCOMPR_LIBS})
ENDIF()

ADD_SUBDIRECTORY(in)
ADD_SUBDIRECTORY(out)
