cmake_minimum_required(VERSION 2.6)

function(benchmark_task name)
    project(${name})
    add_executable(${name} ${name}.cpp)
    include_directories(${PROJECT_SOURCE_DIR}/include ${EVENTDRIVENLIBS_INCLUDE_DIRS})
    target_link_libraries(${name} ${YARP_LIBRARIES} ${EVENTDRIVEN_LIBRARIES} pthread)
    install(TARGETS ${name} DESTINATION bin)
endfunction(benchmark_task)

benchmark_task(mask)
benchmark_task(mask_latencies)
benchmark_task(flow)
benchmark_task(flow_latencies)
benchmark_task(denoised_flow)
benchmark_task(denoised_flow_latencies)
benchmark_task(masked_denoised_flow)
benchmark_task(masked_denoised_flow_latencies)
benchmark_task(masked_denoised_flow_activity)
benchmark_task(masked_denoised_flow_activity_latencies)
